crates/dag-macros/tests/ui/workflow_spill_duplicate.stderr
error: [DAG207] duplicate spill! for edge `trigger` -> `sink`
  --> tests/ui/workflow_spill_duplicate.rs:42:5
   |
42 |     spill!(trigger -> sink, tier = "remote");
   |     ^^^^^
